--- a/docs/4/modules/sqlauth.yml
+++ b/docs/4/modules/sqlauth.yml
@@ -57,15 +57,18 @@ configuration:
 
     Variable    | Description
     ----------- | -----------
+    $address    | The IP address or UNIX socket path of the connecting user.
+    $dhost      | The public hostname of the connecting user.
+    $duser      | The public username of the connecting user.
     $host       | The real hostname of the connecting user.
-    $ip         | The IP address of the connecting user.
     $md5pass    | An MD5 hash of the password sent with `/PASS` by the connecting user (requires [the md5 module](/4/modules/md5)).
     $nick       | The nickname of the connecting user.
     $pass       | The password sent with `/PASS` by the connecting user.
     $real       | The real name (gecos) of the connecting user.
     $server     | The name of the server the connecting user connected to.
+    $sid        | The unique identifier of the server the connecting user connected to.
     $sha256pass | A SHA-256 hash of the password sent with `/PASS` by the connecting user (requires [the sha2 module](/4/modules/sha2)).
-    $user       | The username of the connecting user.
+    $user       | The real username of the connecting user.
     $uuid       | The UUID of the connecting user.
 
   example: |-
