--- a/docs/4/modules/log_syslog.yml
+++ b/docs/4/modules/log_syslog.yml
@@ -20,7 +20,7 @@ configuration:
     required: true
     default: null
     description: |-
-      *This MUST be set to stderr to use JSON logging.*
+      *This MUST be set to syslog to use system logging.*
   example: |-
     ```xml
     <log method="syslog"
