--- a/docs/4/modules/argon2.yml
+++ b/docs/4/modules/argon2.yml
@@ -47,19 +47,6 @@ configuration:
     default: 16
     description: |-
       The length of the salt in bytes.
-  - name: version
-    type: Number
-    required: false
-    default: 13
-    description: |-
-      The version of the Argon2 algorithm to use.
-  details: |-
-    The version field should be set to one of the following values:
-
-    Value  | Description
-    ------ | -----------
-    10     | Use version 1.0 of the Argon2 algorithm.
-    13     | Use version 1.3 of the Argon2 algorithm.
 
   example: |-
     ```xml
@@ -68,8 +55,7 @@ configuration:
             lanes="1"
             threads="1"
             length="32"
-            saltlength="16"
-            version="13">
+            saltlength="16">
     ```
 - name: argon2d
   description: |-
@@ -111,19 +97,6 @@ configuration:
     default: '*See &lt;argon2:saltlength&gt;*'
     description: |-
       The length of the salt in bytes.
-  - name: version
-    type: Number
-    required: false
-    default: '*See &lt;argon2:version&gt;*'
-    description: |-
-      The version of the Argon2d algorithm to use.
-  details: |-
-    The version field should be set to one of the following values:
-
-    Value  | Description
-    ------ | -----------
-    10     | Use version 1.0 of the Argon2d algorithm.
-    13     | Use version 1.3 of the Argon2d algorithm.
 
   example: |-
     ```xml
@@ -132,8 +105,7 @@ configuration:
              lanes="1"
              threads="1"
              length="32"
-             saltlength="16"
-             version="13">
+             saltlength="16">
     ```
 - name: argon2i
   description: |-
@@ -175,19 +147,6 @@ configuration:
     default: '*See &lt;argon2:saltlength&gt;*'
     description: |-
       The length of the salt in bytes.
-  - name: version
-    type: Number
-    required: false
-    default: '*See &lt;argon2:version&gt;*'
-    description: |-
-      The version of the Argon2i algorithm to use.
-  details: |-
-    The version field should be set to one of the following values:
-
-    Value  | Description
-    ------ | -----------
-    10     | Use version 1.0 of the Argon2i algorithm.
-    13     | Use version 1.3 of the Argon2i algorithm.
 
   example: |-
     ```xml
@@ -196,8 +155,7 @@ configuration:
              lanes="1"
              threads="1"
              length="32"
-             saltlength="16"
-             version="13">
+             saltlength="16">
     ```
 - name: argon2id
   description: |-
@@ -239,19 +197,6 @@ configuration:
     default: '*See &lt;argon2:saltlength&gt;*'
     description: |-
       The length of the salt in bytes.
-  - name: version
-    type: Number
-    required: false
-    default: '*See &lt;argon2:version&gt;*'
-    description: |-
-      The version of the Argon2id algorithm to use.
-  details: |-
-    The version field should be set to one of the following values:
-
-    Value  | Description
-    ------ | -----------
-    10     | Use version 1.0 of the Argon2id algorithm.
-    13     | Use version 1.3 of the Argon2id algorithm.
 
   example: |-
     ```xml
@@ -260,8 +205,7 @@ configuration:
               lanes="1"
               threads="1"
               length="32"
-              saltlength="16"
-              version="13">
+              saltlength="16">
     ```
 
 special_notes: |-
