--- a/docs/4/modules/blockamsg.yml
+++ b/docs/4/modules/blockamsg.yml
@@ -1,1 +1,55 @@
-../../3/modules/blockamsg.yml
+name: blockamsg
+
+description: |-
+  This module blocks mass messages sent using the `/AME` and `/AMSG` commands that exist in clients such as mIRC and HexChat.
+
+configuration:
+- name: blockamsg
+  description: |-
+    The `<blockamsg>` tag defines settings about how the blockamsg module should behave. This tag can only be defined once.
+  attributes:
+  - name: delay
+    type: Duration
+    required: false
+    default: 3s
+    description: |-
+      The duration between identical messages to consider them a mass message or 0 to allow any gap.
+  - name: action
+    type: Text
+    required: false
+    default: killopers
+    description: |-
+      The action to take when the module has detected a user sending a mass message.
+  details: |-
+    The action field should be set to one of the following values:
+
+    Value       | Description
+    ----------- | -----------
+    kill        | Disconnect the sending user from the server.
+    killopers   | Disconnect the sending user from the server and notify server operators.
+    notice      | Inform the sending user that their repeated message has been discarded.
+    noticeopers | Inform the sending user that their repeated message has been discarded and notify server operators.
+    silent      | Silently discard repeated messages.
+
+  example: |-
+    ```xml
+    <blockamsg delay="5s"
+               action="killopers">
+    ```
+- name: class
+  description: |-
+    This module extends [the core `<class:privs>` field](/{{ version }}/configuration#class) with the following values:
+  extends: true
+  added_values:
+  - name: servers/ignore-blockamsg
+    description: |-
+      Allows server operators to send messages with the `/AMSG` and `/AME` commands.
+  details: ""
+  example: |-
+    Allows server operators with the class named BasicOper to send messages with the `/AMSG` and `/AME` commands.commands
+
+    ```xml
+    <class name="BasicOper"
+           ...
+           privs="... servers/ignore-blockamsg ...">
+    ```
