--- a/docs/4/modules/mysql.yml
+++ b/docs/4/modules/mysql.yml
@@ -1,1 +1,87 @@
-../../3/modules/mysql.yml
+name: mysql
+
+depends_on:
+  what: a third-party library ([libmysqlclient](https://dev.mysql.com/downloads/connector/c/))
+
+description: |-
+  This module provides the ability for SQL modules to query a MySQL database.
+
+configuration:
+- name: database
+  description: |-
+    The `<database>` tag defines a MySQL database to connect to. This tag can be defined as many times as required.
+  attributes:
+  - name: module
+    type: Text
+    required: true
+    default: null
+    description: |-
+      *This MUST be set to "mysql" to connect to a MySQL database.*
+  - name: id
+    type: Text
+    required: true
+    default: null
+    description: |-
+      The name that SQL-using modules can refer to this `<database>` tag using.
+  - name: host
+    type: Text
+    required: true
+    default: null
+    description: |-
+      The hostname or IP address of a MySQL server.
+  - name: port
+    type: Number
+    required: true
+    default: null
+    description: |-
+      The port on which the MySQL server is listening.
+  - name: user
+    type: Text
+    required: true
+    default: null
+    description: |-
+      The username to log into the MySQL server with.
+  - name: pass
+    type: Text
+    required: true
+    default: null
+    description: |-
+      The password to log into the MySQL server with.
+  - name: name
+    type: Text
+    required: true
+    default: null
+    description: |-
+      The name of the MySQL database to use.
+  - name: charset
+    type: Text
+    required: false
+    default: null
+    description: |-
+      If defined then a custom character set to use with the MySQL server.
+  - name: srv
+    type: Boolean
+    required: false
+    default: 'No'
+    description: |-
+      If enabled then connect to MySQL by [looking up the real host and port from a DNS SRV record](https://dev.mysql.com/doc/refman/8.4/en/connecting-using-dns-srv.html).
+  - name: tls
+    type: Boolean
+    required: false
+    default: 'No'
+    description: |-
+      Whether to connect to the MySQL server using TLS (SSL).
+  details: ""
+  example: |-
+    ```xml
+    <database module="mysql"
+              id="opers"
+              host="localhost"
+              port="3306"
+              user="ircd_opers"
+              pass="changeme"
+              name="inspircd"
+              charset="utf8mb4"
+              srv="no"
+              tls="yes">
+    ```
