--- a/docs/server/messages/uid.yml
+++ b/docs/server/messages/uid.yml
@@ -6,22 +6,33 @@ syntax:
     nick: The nickname of the user.
     real-host: The real hostname of the user.
     displayed-host: The displayed hostname of the user.
-    user: The username of the user.
+    real-user: The real username of the user.
+    displayed-user: The displayed username of the user.
     ip: The IPv4 address, IPv6 address, or UNIX socket path of the user.
     signon: The time at which the user connected.
     modes: The modes which are set on the user.
     mode-parameters: The parameters to the modes which are set on the user.
     real: The real name of the user.
-  text: |-
-    <uid> <ts> <nick> <real-host> <displayed-host> <user> <ip> <signon> <modes> [<mode-parameters>]+ :<real>
+  text:
+  - <uid> <ts> <nick> <real-host> <displayed-host> <real-user> <ip> <signon> <modes> [<mode-parameters>]+ :<real>
+  - <uid> <ts> <nick> <real-host> <displayed-host> <real-user> <displayed-user> <ip> <signon> <modes> [<mode-parameters>]+ :<real>
 description: |-
   Introduces a user to the network.
 example:
 - description: |-
-    Introduces a user
+    [**1205**] Introduces a user
   text: |-
     :36D SVSJOIN 36DAAAAAA 1234567890 Sadie localhost wibble.wobble sadie 127.0.0.1 1234567890 +i :Sadie
 - description: |-
-    Introduces a user with mode parameters
+    [**1206+**] Introduces a user
+  text: |-
+    :36D SVSJOIN 36DAAAAAA 1234567890 Sadie localhost wibble.wobble sp91 sadie 127.0.0.1 1234567890 +i :Sadie
+- description: |-
+    [**1205**] Introduces a user with mode parameters
   text: |-
     :36D SVSJOIN 36DAAAAAA 1234567890 Sadie localhost wibble.wobble sadie 127.0.0.1 1234567890 +io Aa :Sadie
+- description: |-
+    [**1206+**] Introduces a user with mode parameters
+  text: |-
+    :36D SVSJOIN 36DAAAAAA 1234567890 Sadie localhost wibble.wobble sp91 sadie 127.0.0.1 1234567890 +io Aa :Sadie
+
