--- a/docs/server/messages/capab.yml
+++ b/docs/server/messages/capab.yml
@@ -7,6 +7,9 @@ syntax:
   fields:
     capability-key: The name of a server capability.
     capability-value: The value of a server capability.
+    extban-type: The type of extban this entry represents.
+    extban-name: The name of the extban.
+    extban-char: The character for this extban.
     mode-type: The type of mode this entry represents.
     mode-rank: If this mode is a prefix mode then the rank of the prefix.
     mode-name: The name of the mode.
@@ -16,42 +19,45 @@ syntax:
     module-link-data: Data for checking compatibility between servers.
     protocol: The server protocol version to use.
   text:
-  - START <version>
+  - START <protocol>
   - CAPABILITIES :[<capability-key>=<capability-value>]+
+  - EXTBANS :[<extban-type>:<extban-name>=<extban-char>]+
   - MODULES :[<module-name>[=<module-link-data>]]+
   - MODSUPPORT :[<module-name>[=<module-link-data>]]+
-  - CHANMODES :[<mode-type>:[<mode-rank>]:<mode-name>=[<mode-prefix>]<modechar>]+
-  - USERMODES :[<mode-type>:[<mode-rank>]:<mode-name>=[<mode-prefix>]<modechar>]+
+  - CHANMODES :[<mode-type>:[<mode-rank>]:<mode-name>=[<mode-prefix>]<mode-char>]+
+  - USERMODES :[<mode-type>:[<mode-rank>]:<mode-name>=[<mode-prefix>]<mode-char>]+
   - END
 
 extra: |-
-  If provided the protocol field can be set to one of the following values:
-
-  Protocol Version | Supported By
-  ---------------- | -------------
-  1202             | InspIRCd v2 &mdash; v3
-  1205             | InspIRCd v3 & v4 (dev)
-  1206             | InspIRd v4 (dev)
-
   If provided the capability-key fields can be set to one of the following values:
 
   Name             | Example Value        | Description
   ---------------- | -------------------- | -----------
   CASEMAPPING      | ascii                | The name of the casemapping system used for nicknames.
   CHALLENGE        | jHBspL5fA4wN4Zh0i2sR | The challenge key to use for HMAC authentication.
-  CHANMAX          | 64                   | The maximum number of channels a user can normally join.
-  EXTBANS          | ABCDEFabcdef         | The extended bans that exist on the remote server.
-  GLOBOPS          | 1                    | Whether the server supports the GLOBOPS extension.
-  IDENTMAX         | 10                   | The maximum length of a username (ident).
+  CHANMAX          | 64                   | [**1205**] The maximum number of channels a user can normally join.
+  EXTBANS          | ABCDEFabcdef         | [**1205**] The extended bans that exist on the remote server.
+  GLOBOPS          | 1                    | [**1205**] Whether the server supports the GLOBOPS extension.
+  IDENTMAX         | 10                   | [**1205**] The maximum length of a username (ident).
   MAXAWAY          | 200                  | The maximum length of an away message.
+  MAXCHANNEL       | 64                   | [**1206+**] The maximum number of channels a user can normally join.
   MAXHOST          | 64                   | The maximum length of a hostname.
   MAXKICK          | 255                  | The maximum length of a kick message.
   MAXLINE          | 512                  | The maximum length of a client protocol IRC line without tags.
   MAXMODES         | 20                   | The maximum number of non-simple modes that can be set at once.
+  MAXNICK          | 30                   | [**1206+**] The maximum length of a nickname.
   MAXQUIT          | 255                  | The maximum length of a quit message.
   MAXREAL          | 128                  | The maximum length of a real name.
   MAXTOPIC         | 307                  | The maximum length of a channel topic.
-  NICKMAX          | 30                   | The maximum length of a nickname.
+  MAXUSER          | 10                   | [**1206+**] The maximum length of a username (ident).
+  NICKMAX          | 30                   | [**1205**] The maximum length of a nickname.
+
+  If provided the extban-type field can be set to one of the following values:
+
+  Name     | Example       | Description
+  -------- | ------------- | -----------
+  acting   | `m` (mute)    | The extban defines a restriction.
+  matching | `w` (gateway) | The extban matches a user.
 
   If provided the mode-type field can be set to one of the following values:
 
@@ -63,6 +69,16 @@ extra: |-
   prefix    | `o` (op)        | The mode confers a channel privilege on users.
   simple    | `m` (moderated) | The mode is a simple on/off flag.
 
+  [**1206+**] If provided the module-link-data field is a dictionary of URL-encoded key value pairs.
+
+  If provided the protocol field can be set to one of the following values:
+
+  Protocol Version | Supported By
+  ---------------- | -------------
+  1202             | InspIRCd v2 &mdash; v3
+  1205             | InspIRCd v3 & v4 (dev)
+  1206             | InspIRd v4 (dev)
+
 description: |-
   Negotiates the capabilities of the remote server. This includes data such as modes, modules, and limits.
 example:
@@ -71,13 +87,21 @@ example:
   text: |-
     CAPAB START 1205
 - description: |-
-    Negotiates required modules
+    [**1205**] Negotiates required modules
   text: |-
     CAPAB MODULES :m_foo.so m_bar.so=wibble m_baz.so
 - description: |-
-    Negotiates optional modules
+    [**1206+**] Negotiates required modules
+  text: |-
+    CAPAB MODULES :foo bar=key1;key2=value2 baz
+- description: |-
+    [**1205**] Negotiates optional modules
   text: |-
     CAPAB MODSUPPORT :m_foo.so m_bar.so=wibble m_baz.so
+- description: |-
+    [**1206+**] Negotiates optional modules
+  text: |-
+    CAPAB MODSUPPORT :foo bar=key1;key2=value2 baz
 - description: |-
     Negotiates channel modes
   text: |-
