--- a/docs/server/messages/sinfo.yml
+++ b/docs/server/messages/sinfo.yml
@@ -10,12 +10,14 @@ syntax:
 extra: |-
   If provided the key fields can be set to one of the following values:
 
-  Name        | Example                                | Description
-  ----------- | -------------------------------------- | -----------
-  desc        | Wibble IRC Server                      | A description of the server.
-  fullversion | InspIRCd-3.2.1. irc.example.com :[32B] | The output of /VERSION as a server operator.
-  rawversion  | InspIRCd-3.2.1                         | The name and version of the software the server runs.
-  version     | InspIRCd-3. testnet.inspircd.org :     | The output of /VERSION as a normal user.
+  Name          | Example                                | Description
+  ------------- | -------------------------------------- | -----------
+  customversion | Wibble IRC Server                      | [**1206+**] A custom description to show in /VERSION.
+  desc          | Wibble IRC Server                      | A description of the server.
+  fullversion   | InspIRCd-3.2.1. irc.example.com :[32B] | [**1205**] The output of /VERSION as a server operator.
+  rawbranch     | InspIRCd-4                             | [**1206+**] The name and branch of the software the server runs.
+  rawversion    | InspIRCd-3.2.1                         | The name and version of the software the server runs.
+  version       | InspIRCd-3. testnet.inspircd.org :     | [**1205**] The output of /VERSION as a normal user.
 example:
 - description: |-
     Sets the raw version of the remote server
