--- a/docs/4/modules/codepage.yml
+++ b/docs/4/modules/codepage.yml
@@ -99,8 +99,8 @@ special_notes: |-
 
   Code page       | Include Tag
   --------------- | -----------
-  ascii           | `<include file="examples/codepages/ascii.conf.example">`
-  iso-8859-1      | `<include file="examples/codepages/iso-8859-1.conf.example">`
-  iso-8859-2      | `<include file="examples/codepages/iso-8859-2.conf.example">`
-  rfc1459         | `<include file="examples/codepages/rfc1459.conf.example">`
-  strict-rfc1459  | `<include file="examples/codepages/strict-rfc1459.conf.example">`
+  ascii           | `<include file="examples/codepages/ascii.example.conf">`
+  iso-8859-1      | `<include file="examples/codepages/iso-8859-1.example.conf">`
+  iso-8859-2      | `<include file="examples/codepages/iso-8859-2.example.conf">`
+  rfc1459         | `<include file="examples/codepages/rfc1459.example.conf">`
+  strict-rfc1459  | `<include file="examples/codepages/strict-rfc1459.example.conf">`
