--- a/docs/4/modules/help.yml
+++ b/docs/4/modules/help.yml
@@ -75,5 +75,5 @@ special_notes: |-
   To use this add the following tag to your configuration:
 
   ```xml
-  <include file="examples/help.conf.example">
+  <include file="examples/help.example.conf">
   ```
