--- a/docs/3/modules/messageflood.yml
+++ b/docs/3/modules/messageflood.yml
@@ -28,7 +28,7 @@ configuration:
     default: 0.2
     added: 3.2.0
     description: |-
-      The number of lines that a single `NOTICE` message is equivalent to. This should be lower than the other commands to avoid users being kicked by automated client features such as typing notifications.
+      The number of lines that a single `TAGMSG` message is equivalent to. This should be lower than the other commands to avoid users being kicked by automated client features such as typing notifications.
   details: ""
   example: |-
     ```xml
