Mark hmac-md5, md5, and pbkdf2-hmac-md5 as deprecated.
These will be removed in v5.

--- a/docs/4/modules/md5.yml
+++ b/docs/4/modules/md5.yml
@@ -1,5 +1,9 @@
 name: md5
 
+introduction: |-
+  !!! warning ""
+      This module is deprecated and will be removed in the next major version of InspIRCd.
+
 description: |-
   This module allows other modules to generate [MD5](https://en.wikipedia.org/wiki/MD5) hashes.
 
