--- a/docs/4/modules/cloak_md5.yml
+++ b/docs/4/modules/cloak_md5.yml
@@ -1,5 +1,13 @@
 name: cloak_md5
 
+introduction: |-
+  !!! warning ""
+      This module is deprecated and will be removed in the next major version of InspIRCd.
+
+      You should migrate to the `hmac-sha256` or `hmac-sha256-addr` cloak methods from [the cloak_sha256 module](/4/modules/cloak_sha256).
+
+      You can keep your `half` and `full` cloak methods as secondary cloak methods in v4 to avoid breaking bans.
+
 description: |-
   This module adds the `half` and `full` cloaking methods for use with [the cloak module](/4/modules/cloak). These methods are deprecated but exist for compatibility with v3.
 
