Switch the v4 sslprofile examples to use sha3-256.

--- a/docs/4/modules/ssl_gnutls.yml
+++ b/docs/4/modules/ssl_gnutls.yml
@@ -149,7 +149,7 @@ configuration:
                 certfile="cert.pem"
                 crlfile=""
                 dhfile="dhparams.pem"
-                hash="sha256"
+                hash="sha3-256"
                 keyfile="key.pem"
                 mindhbits="1024"
                 outrecsize="2048"
