--- a/docs/4/modules/mysql.yml
+++ b/docs/4/modules/mysql.yml
@@ -64,13 +64,13 @@ configuration:
     required: false
     default: 'No'
     description: |-
-      If enabled then connect to MySQL by [looking up the real host and port from a DNS SRV record](https://dev.mysql.com/doc/refman/8.4/en/connecting-using-dns-srv.html).
+      If enabled then connect to MySQL by [looking up the real host and port from a DNS SRV record](https://dev.mysql.com/doc/refman/8.0/en/connecting-using-dns-srv.html). Requires MySQL 8.0 or newer.
   - name: tls
     type: Boolean
     required: false
     default: 'No'
     description: |-
-      Whether to connect to the MySQL server using TLS (SSL).
+      Whether to connect to the MySQL server using TLS (SSL). Requires MySQL 8.0 or newer.
   details: ""
   example: |-
     ```xml
