Document if a S2S message is provided by a module.

--- a/docs/server/messages/svsjoin.yml
+++ b/docs/server/messages/svsjoin.yml
@@ -8,6 +8,7 @@ syntax:
     <uid> <channel> [<key>]
 description: |-
   Forces the specified user to join a channel. If an empty key is specified then override any modes which might prevent the join.
+module: services
 example:
 - description: |-
     Joins user 36EAAAAAA to #wibble
